@@ -1,6 +1,2 @@
-export JAVA_OPTS="-XX:+DisableExplicitGC \
-	-XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled \
-	-XX:+UseCMSCompactAtFullCollection -XX:LargePageSizeInBytes=128m \
-	-XX:+UseFastAccessorMethods -XX:+UseCMSInitiatingOccupancyOnly \
-	-XX:CMSInitiatingOccupancyFraction=70"
+export JAVA_OPTS="$JAVA_OPTS"
 
